# parallel_untar

./: .gitignore  Cargo.toml  README.md
src/: main.rs
