[package]
name = "parallel_untar"
authors = ["feng liang <feng.liang@kaust.edu.sa>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
glob = "0.3"
clap = { version= "3.0", features = ["derive"] }